A2- routes + doc
