# tp2_etu/app/Http/Controllers/AuthController.php
@@ -7,11 +7,60 @@ use App\Models\User;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Validation\ValidationException;
-use Laravel\Sanctum\HasApiTokens;
-use HasApiTokens;
 
 class AuthController extends Controller
 {
+
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     type="object",
+ *     @OA\Property(
+ *         property="name",
+ *         type="string",
+ *         description="The name of the user",
+ *         example="John Doe"
+ *     ),
+ *     @OA\Property(
+ *         property="email",
+ *         type="string",
+ *         description="The email of the user",
+ *         example="john.doe@example.com"
+ *     ),
+ */
+
+   /**
+     * @OA\Post(
+     *     path="/api/register",
+     *     tags={"Auth"},
+     *     summary="Register a new user",
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"name","email","password"},
+     *              @OA\Property(property="name", type="string", format="text", example="John Doe"),
+     *              @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
+     *              @OA\Property(property="password", type="string", format="password", example="Passw0rd"),
+     *          ),
+     *     ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="user", type="object"),
+     *              @OA\Property(property="message", type="string", example="User registered successfully"),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response=400,
+     *          description="Bad Request",
+     *     ),
+     *     @OA\Response(
+     *          response=401,
+     *          description="Unauthorized",
+     *     ),
+     * )
+    */
     public function register(Request $request)
     {
         $request->validate([
@@ -24,23 +73,44 @@ class AuthController extends Controller
 
         //Une fois validé, créer et enregistrer le User dans la BD avec les infos de la requête (encryptez le mot de passe avec bcrypt !)
 
-        $user = new User();
-        $user->login = $request->login;
-        $user->password = bcrypt($request->password);
-        $user->email = $request->email;
-        $user->last_name = $request->last_name;
-        $user->first_name = $request->first_name;
-        $user->save();
+        $user = User::create([
+            'login' => $request->login,
+            'password' => bcrypt($request->password),
+            'email' => $request->email,
+            'last_name' => $request->last_name,
+            'first_name' => $request->first_name,
+        ]);
 
-        if(Auth::attempt($request->toArray())){
-            $user=Auth::user();
-            $token = $user->createToken('signInToken');
-            return response()->json(['token'=>$token->plainTextToken])->setStatusCode(CREATED);
-        }
-        else{
-            return response()->json(['message'=>'User not created'])->setStatusCode(SERVER_ERROR);
-        }
+        $token = $user->createToken('Personal Access Token')->plainTextToken;
+        return response()->json(['message' => 'User successfully registered', 'token' => $token])->setStatusCode(CREATED);
     }
+    /**
+ * @OA\Post(
+ *     path="/api/login",
+ *     tags={"Auth"},
+ *     summary="Login user",
+ *     @OA\RequestBody(
+ *          required=true,
+ *          @OA\JsonContent(
+ *              required={"email","password"},
+ *              @OA\Property(property="email", type="string", format="email", example="john_doe@example.com"),
+ *              @OA\Property(property="password", type="string", format="password", example="Passw0rd!"),
+ *          ),
+ *     ),
+ *     @OA\Response(
+ *          response=200,
+ *          description="User successfully logged in",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="message", type="string", example="User successfully logged in"),
+ *              @OA\Property(property="token", type="string", example="2|Pznhz8nZXdkHyPvC5sKHaGgaRYk8zN1c5fK3XrSL"),
+ *          )
+ *     ),
+ *     @OA\Response(
+ *          response=422,
+ *          description="Validation Error",
+ *     )
+ * )
+ */
 
     public function login(Request $request)
     {
@@ -61,6 +131,18 @@ class AuthController extends Controller
 
         return response()->json(['message' => 'User successfully logged in', 'token' => $token]);
     }
+
+    /**
+     * @OA\Post(
+     *    path="/api/logout",
+     *   tags={"Auth"},
+     *  summary="Logout user",
+     * @OA\Response(
+     *     response=204,
+     *   description="User successfully logged out",
+     * )
+     * )
+     */
 
     public function logout(Request $request)
     {
