# tp2_etu/storage/api-docs/api-docs.json
@@ -1,201 +1,152 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Films API",
-        "version": "0.1"
+        "title": "API Documentation",
+        "description": "API Information",
+        "contact": {
+            "email": "contact@info.com"
+        },
+        "version": "1.0.0"
     },
     "paths": {
-        "/api/films/{id}/actors": {
-            "get": {
-                "tags": [
-                    "ActorFilm"
-                ],
-                "summary": "Get list of actors for a film",
-                "description": "Returns list of actors for a film",
-                "operationId": "ba6ffc810d151f631a90a873ca9242ad",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            }
-        },
-        "/api/critics/{id}": {
-            "delete": {
-                "tags": [
-                    "Critics"
-                ],
-                "summary": "Deletes a critics",
-                "description": "Deletes a critics",
-                "operationId": "4c7bbd907e57760bbbfc560c1ba8e1ba",
-                "responses": {
-                    "204": {
-                        "description": "No content"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            }
-        },
-        "/api/films": {
-            "get": {
-                "tags": [
-                    "Films"
-                ],
-                "summary": "Gets list of films",
-                "description": "Returns list of films",
-                "operationId": "271e474415d2f29bf3c163247c5f4639",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/api/search-films": {
-            "get": {
-                "tags": [
-                    "Films"
-                ],
-                "summary": "Gets list of films based on criterias",
-                "description": "Returns list of films",
-                "operationId": "f89669d8e90cc4160fb4373e56700bdc",
-                "parameters": [
-                    {
-                        "parameter": "keyword_in_query",
-                        "name": "keyword",
-                        "in": "query",
-                        "description": "A keyword to look for in the title",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "parameter": "rating_in_query",
-                        "name": "rating",
-                        "in": "query",
-                        "description": "A rating to look for in the rating description",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "parameter": "minLength_in_query",
-                        "name": "minLength",
-                        "in": "query",
-                        "description": "Min length of the movies to find",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "parameter": "maxLength_in_query",
-                        "name": "maxLength",
-                        "in": "query",
-                        "description": "Min length of the movies to find",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/api/films/{id}/average-score": {
-            "get": {
-                "tags": [
-                    "Films"
-                ],
-                "summary": "Gets average score of a film",
-                "description": "Returns the average score",
-                "operationId": "fcd693de18daad26767293c2f5a2927e",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/api/films/{id}/critics": {
-            "get": {
-                "tags": [
-                    "FilmCritics"
-                ],
-                "summary": "Get list of critics for a film",
-                "description": "Returns list of critics for a film",
-                "operationId": "c8f40755ef3dfc8bc0f3e8632a211163",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/api/users": {
+        "/api/register": {
             "post": {
                 "tags": [
-                    "Users"
+                    "Auth"
                 ],
-                "summary": "Creates a user",
-                "description": "Returns a user",
-                "operationId": "1a63883edb751cb640a2f6f516236f49",
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "422": {
-                        "description": "Invalid data"
+                "summary": "Register a new user",
+                "operationId": "8a56853624e025573120a09a4c75d468",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "user1@mail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "Passw0rd"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
                     }
-                }
-            }
-        },
-        "/api/users/{id}": {
-            "put": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Updates a user",
-                "description": "Returns a user",
-                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    },
-                    "422": {
-                        "description": "Invalid Data"
-                    }
-                }
-            }
-        },
-        "/api/users/{id}/favorite-language'": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Gets favorite language of a user",
-                "description": "Returns favorite language of a user",
-                "operationId": "ca5fc4998d991c2b08009eca78736cbf",
+                },
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user": {
+                                            "type": "object"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User registered successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
-                    "404": {
-                        "description": "Not found"
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login user",
+                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "john_doe@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "Passw0rd!"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User successfully logged in",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User successfully logged in"
+                                        },
+                                        "token": {
+                                            "type": "string",
+                                            "example": "2|Pznhz8nZXdkHyPvC5sKHaGgaRYk8zN1c5fK3XrSL"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                }
+            }
+        },
+        "/api/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout user",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
+                "responses": {
+                    "204": {
+                        "description": "User successfully logged out"
                     }
                 }
             }
